add changes suggested in meeting